--- a/src/pages/components/GameImage.css
+++ b/src/pages/components/GameImage.css
@@ -8,10 +8,15 @@ body > #root > div {
   margin: 0;
   padding: 3%;
   height: 100%;
+  background: no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .title {
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(255, 255, 255, 0.6);
   text-align: center
 }
 
@@ -30,6 +35,7 @@ body > #root > div {
 
 .story {
   height: 40vh;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(255, 255, 255, 0.6);
+  text-align: center;
   margin-bottom: 4%;
 }
